fix NF description and experience align

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,6 @@ ul {
 
 .experience h4 {
   display: inline;
-  vertical-align: middle;
 }
 .experience strong {
   background: #e6fb92;
